more clean up + possible bugfix for isLocalScopedTarget (changed HaxeEnumExtractedValue to HaxeEnumExtractedValueReference)